--- a/CompanyCore/CompanyCore.Web/webfront/src/html/index.html
+++ b/CompanyCore/CompanyCore.Web/webfront/src/html/index.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页</title>
+    <link rel="stylesheet" type="text/css" href="../../bundle/dep/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" href="../../bundle/css/admin/common.css"/>
+    <script type="text/javascript" src="../../bundle/dep/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="../../bundle/dep/bootstrap/dist/js/bootstrap.js"></script>
+
 </head>
 <body>
-    <header></header>
-    <nav></nav>
-    <a href="index1.html">dfadsfa</a>
-    <script type="text/javascript">
-        alert("123");
-    </script>
+<div class="header-warp">
+    <div class="logo-info-warp"></div>
+</div>
+<div class="nav-warp">
+    <div class="first-menu-warp"></div>
+</div>
+<div class="content-warp">
+    <div class="second-menu-warp"></div>
+    <div class="slider-warp"></div>
+    <div class="main-content-warp"></div>
+</div>
+
 </body>
 </html>
