提交界面完成

--- a/CompanyCore/CompanyCore.Web/webfront/src/html/index.html
+++ b/CompanyCore/CompanyCore.Web/webfront/src/html/index.html
@@ -6,23 +6,233 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页</title>
     <link rel="stylesheet" type="text/css" href="../../bundle/dep/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css"
+          href="../../bundle/dep/bootstrap/dist/font-awesome-4.7.0/css/font-awesome.css"/>
     <link rel="stylesheet" type="text/css" href="../../bundle/css/admin/common.css"/>
     <script type="text/javascript" src="../../bundle/dep/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="../../bundle/dep/bootstrap/dist/js/bootstrap.js"></script>
 
 </head>
 <body>
-<div class="header-warp">
-    <div class="logo-info-warp"></div>
-</div>
-<div class="nav-warp">
-    <div class="first-menu-warp"></div>
-</div>
-<div class="content-warp">
-    <div class="second-menu-warp"></div>
-    <div class="slider-warp"></div>
-    <div class="main-content-warp"></div>
-</div>
 
+<div class="header-nav-warp pc">
+    <div class="header-warp">
+        <div class="logo-info-warp">
+            <div class="logo">
+                <img src="../../bundle/img/jiebanglogo_big.png" title="后台模板"/>
+            </div>
+
+            <span class="user-info">欢迎您，杨锦
+              <span class="log-out"><i class="glyphicon glyphicon-log-out"></i> 退出</span>
+            </span>
+
+        </div>
+    </div>
+    <div class="nav-warp">
+        <div class="first-menu-warp">
+            <ul class="first-nav">
+                <li><a href="javascript:void(0)">系统管理 <span class="nav-arrow glyphicon glyphicon-remove"></span></a>
+                </li>
+                <li><a href="javascript:void(0)" class="active">产品管理<span
+                        class="nav-arrow glyphicon glyphicon-remove"></span></a></li>
+                <li><a href="javascript:void(0)">产品类别管理<span class="nav-arrow glyphicon glyphicon-remove"></span></a>
+                </li>
+                <li><a href="javascript:void(0)">行业动态<span class="nav-arrow glyphicon glyphicon-remove"></span></a></li>
+            </ul>
+        </div>
+        <div class="second-menu-warp">
+            <ul class="second-nav">
+
+                <li><a href="javascript:void(0)">系统管理 <span class="nav-arrow glyphicon glyphicon-remove"></span></a>
+                </li>
+                <li><a href="javascript:void(0)" class="active">产品管理<span
+                        class="nav-arrow glyphicon glyphicon-remove"></span></a></li>
+                <li><a href="javascript:void(0)">产品类别管理<span class="nav-arrow glyphicon glyphicon-remove"></span></a>
+                </li>
+                <li><a href="javascript:void(0)">行业动态<span class="nav-arrow glyphicon glyphicon-remove"></span></a></li>
+            </ul>
+        </div>
+    </div>
+
+</div>
+<div class="content-warp pc">
+    <div class="slider-warp">
+        <span class="fa slider-nav-toggle-control"></span>
+        <ul class="slider-nav">
+            <li>
+                <a href="javascript:void(0)"><span class="nav-icon fa fa-cog"></span>
+                    <span class="nav-label">系统管理</span>
+                    <span class="nav-arrow fa fa-angle-double-down"></span></a>
+                <ul class="nav-ul">
+                    <li><a href="javascript:void(0)">系统管理</a></li>
+                    <li><a href="javascript:void(0)">产品管理</a></li>
+                    <li><a href="javascript:void(0)">产品类别管理</a></li>
+                    <li><a href="javascript:void(0)">行业动态</a></li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="javascript:void(0)"><span class="nav-icon fa fa-cog"></span>
+                    <span class="nav-label">系统管理</span>
+                    <span class="nav-arrow fa fa-angle-double-up"></span></a>
+                <ul class="nav-ul none">
+                    <li><a href="javascript:void(0)">系统管理</a></li>
+                    <li><a href="javascript:void(0)">产品管理</a></li>
+                    <li><a href="javascript:void(0)">产品类别管理</a></li>
+                    <li><a href="javascript:void(0)">行业动态</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="javascript:void(0)"><span class="nav-icon fa fa-cog"></span>
+                    <span class="nav-label">系统管理</span>
+                    <span class="nav-arrow fa fa-angle-double-up"></span></a>
+                <ul class="nav-ul none">
+                    <li><a href="javascript:void(0)">系统管理</a></li>
+                    <li><a href="javascript:void(0)">产品管理</a></li>
+                    <li><a href="javascript:void(0)">产品类别管理</a></li>
+                    <li><a href="javascript:void(0)">行业动态</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="javascript:void(0)"><span class="nav-icon fa fa-cog"></span>
+                    <span class="nav-label">系统管理</span>
+                    <span class="nav-arrow fa fa-angle-double-up"></span></a>
+                <ul class="nav-ul none">
+                    <li><a href="javascript:void(0)">系统管理</a></li>
+                    <li><a href="javascript:void(0)">产品管理</a></li>
+                    <li><a href="javascript:void(0)">产品类别管理</a></li>
+                    <li><a href="javascript:void(0)">行业动态</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="javascript:void(0)"><span class="nav-icon fa fa-cog"></span>
+                    <span class="nav-label">系统管理</span>
+                    <span class="nav-arrow fa fa-angle-double-up"></span></a>
+                <ul class="nav-ul none">
+                    <li><a href="javascript:void(0)">系统管理</a></li>
+                    <li><a href="javascript:void(0)">产品管理</a></li>
+                    <li><a href="javascript:void(0)">产品类别管理</a></li>
+                    <li><a href="javascript:void(0)">行业动态</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div class="main-content-warp">
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+        <p> 主要内容区域</p>
+
+
+        主要内容区域
+        主要内容区域
+        主要内容区域主要内容区域
+        主要内容区域
+        主要内容区域
+        主要内容区域主要内容区域
+        主要内容区域
+        主要内容区域
+        主要内容区域主要内容区域
+        主要内容区域
+        主要内容区域
+        主要内容区域主要内容区域
+        主要内容区域
+        主要内容区域
+        主要内容区域主要内容区域
+        主要内容区域
+        主要内容区域
+        主要内容区域主要内容区域
+        主要内容区域
+        主要内容区域
+        主要内容区域
+    </div>
+</div>
+<script type="text/javascript" src="../../bundle/js/index.js"></script>
 </body>
 </html>
