--- a/CompanyCore/CompanyCore.Web/webfront/src/html/index.html
+++ b/CompanyCore/CompanyCore.Web/webfront/src/html/index.html
@@ -233,6 +233,7 @@
         主要内容区域
     </div>
 </div>
-<script type="text/javascript" src="../../bundle/js/index.js"></script>
+<script type="text/javascript" src="../../bundle/js/admin/index.js"></script>
+<script type="text/javascript" src="../../bundle/js/admin/app.js"></script>
 </body>
 </html>
